2007-07-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Implemented dependency tracking. Dependency
	  tracking is treated as a side effect of compiling.

2007-07-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CTextEditorExtension.cs, CBinding.addin.xml, CBinding.mdp,
	  Makefile.am: Implemented a better formatting strategy (using a text
	  editor extension). 

2007-07-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CTextEditorExtension.cs, CBinding.addin.xml, CBinding.mdp,
	  CFormattingStrategy.cs, Makefile.am: Implemented a very simple
	  FormattingStrategy.
	* Project/CProject.cs: Changed the project type from 'C/C++' to
	  'Native'.

2007-07-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/StructureNodeBuilder.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/MemberNodeBuilder.cs, Navigation/Function.cs,
	  Navigation/Enumeration.cs, Navigation/GlobalsNodeBuilder.cs,
	  Navigation/VariableNodeBuilder.cs,
	  Navigation/EnumerationNodeBuilder.cs, Navigation/Member.cs,
	  Navigation/MacroDefinitionsNodeBuilder.cs,
	  Navigation/Enumerator.cs, Navigation/ClassNodeBuilder.cs,
	  Navigation/Variable.cs, Navigation/Union.cs,
	  Navigation/Namespace.cs, Navigation/Typedef.cs,
	  Navigation/Structure.cs, Navigation/Macro.cs,
	  Navigation/LanguageItem.cs, Navigation/FunctionNodeBuilder.cs,
	  Navigation/UnionNodeBuilder.cs, Navigation/Class.cs,
	  Navigation/NamespaceNodeBuilder.cs, Makefile.am, CBinding.mdp,
	  Parser/TagDatabaseManager.cs, Parser/Tag.cs,
	  Parser/ProjectInformation.cs, Parser/ProjectInformationManager.cs:
	  Seperated the navigation stuff from the parsing stuff.

2007-07-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* ProjectPad/ProjectPackageNodeBuilder.cs: Implemented dragging and
	  dropping of packages.

2007-07-12  Marcos David Marin Amador <MarcosMarin@gmail.com> 
